CIRCLE REPEAT DO NOT MERGE

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,8 +109,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -291,8 +291,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -401,8 +401,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -511,8 +511,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -635,8 +635,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -731,8 +731,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -827,8 +827,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -924,8 +924,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -1021,8 +1021,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -1132,8 +1132,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -1229,8 +1229,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -1374,8 +1374,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -1498,8 +1498,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -1597,8 +1597,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -1675,8 +1675,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -1752,8 +1752,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -1816,8 +1816,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -1926,8 +1926,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -2036,8 +2036,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -2136,8 +2136,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -2192,8 +2192,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -2375,8 +2375,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -2453,8 +2453,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -2549,8 +2549,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -2660,8 +2660,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -2759,8 +2759,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -2855,8 +2855,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -2951,8 +2951,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -3015,8 +3015,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -3125,8 +3125,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -3180,8 +3180,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -3244,8 +3244,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -3343,8 +3343,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -3454,8 +3454,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -3636,8 +3636,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
@@ -3732,8 +3732,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: null
+    - REPEATED_UTEST_TARGET: test
+    - REPEATED_UTEST_CLASS: CompactStorageSplit*Test
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 100
